<resources>
    <string name="app_name">Studality</string>
    <string name="home">Home</string>
    <string name="mood">mood</string>
    <string name="courses">Courses</string>
    <string name="notes">my notes</string>
    <string name="notes_fragment">Notes Fragment</string>
    <string name="course_fragment">Course Fragment</string>
    <string name="mood_fragment">Mood Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="to_do">schedule</string>
    <string name="notes1">Notes</string>
    <string name="account">Account</string>
    <string name="note_title">Note Title</string>
    <string name="not_a_member">Not a member?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="due_date">Due date</string>
    <string name="description_title">Description Title</string>
    <string name="your_account">your account</string>
    <string name="studality">Studality</string>
    <string name="settings">Settings</string>
    <string name="setting">settings</string>
    <string name="student_profile">Student Profile</string>
    <string name="are_you_a_student">Are you a Student?</string>
    <string name="what_did_you_do">What did you do?</string>
    <string name="save">Save</string>
    <string name="askMood">What did you do today? </string>
    <string name="task_title">Title</string>
    <string name="task_due_date">Due Date</string>
    <string name="task_description">Course Title</string>
    <string name="add_task">Add Schedule</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="add_coursework">add courses</string>
    <string name="assignment_information">Assignment Information</string>
    <string name="moment_of_zen">\'Moment of Zen\'</string>
    <string name="add_note">add note</string>
    <string name="add_courses_here">add courses here</string>
    <string name="course_title">Course Title</string>
    <string name="course_average">course average</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="today_is">Today is</string>
    <string name="note_description" />
    <string-array name="color">
        <item> Red </item>
        <item> Blue </item>
        <item> Green </item>
    </string-array>
    <string-array name="percentGrade">
        <item>0.05</item>
        <item>0.10</item>
        <item>0.15</item>
        <item>0.20</item>
        <item>0.25</item>
        <item>0.30</item>
        <item>0.35</item>
        <item>0.45</item>
        <item>0.50</item>
        <item>0.60</item>
        <item>0.75</item>
    </string-array>
    <string-array name="currentGrade">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D+</item>
        <item>D</item>
        <item>F</item>
    </string-array>
</resources>