<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Used for bottom navigation on the Dashboard Activity, inc icons and title-->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_mood"
        android:icon="@drawable/mood"
        android:title="Mood"/>

<!--    <item-->
<!--        android:id="@+id/nav_courses"-->
<!--        android:icon="@drawable/course"-->
<!--        android:title="Schedule"/>-->

    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/notes"
        android:title="@string/notes1"/>

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

</menu>