<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.NotesCreate"
    android:background="@color/primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_470sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <!--Back button-->
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!--"Note Title" edittext-->
            <EditText
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/secondary"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/backButton"/>


            <!--This is a placeholder, for spacing and UI purposes-->
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/noteTitle"
                app:layout_constraintStart_toStartOf="@id/noteTitle"
                app:layout_constraintTop_toBottomOf="@id/noteTitle"/>


            <!--"Note Subtitle" edittext-->
            <EditText
                android:id="@+id/noteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="Note Subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/tertiary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"/>

            <!--Yellow thingy for UI purposes-->
            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/noteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/noteSubtitle" />


            <!--"Type Note Here" edittext-->
            <EditText
                android:id="@+id/noteContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="Type Note Here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/tertiary"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noteSubtitle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!--Add Note Button-->
    <Button
        android:id="@+id/doneButton"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_50sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/background_subtitle_indicator"
        android:layout_centerHorizontal="true"
        android:text="@string/add_note"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_20sdp"/>

</RelativeLayout>